# skillguard

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  run_web.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  new_pattern.md
docs/: api-reference.md  v0.1.0-status-report.md
src/skillguard/: __init__.py  auth.py  cli.py  logger.py  mcp_server.py  ratelimit.py
src/skillguard/output/: __init__.py  sarif.py
src/skillguard/patterns/: __init__.py  injection.json  malware.json
src/skillguard/scanners/: __init__.py  ast_scanner.py  osv_checker.py  prompt.py  static.py  taint_tracker.py  url.py
src/skillguard/web/: __init__.py  app.py
src/skillguard/web/static/: robots.txt
src/skillguard/web/templates/: admin.html  admin_login.html  index.html
tests/: conftest.py  test_api.py  test_prompt_scanner.py  test_security.py  test_static_scanner.py
tests/fixtures/: clean_skill.md  clean_skill.py  hidden_payload.md  injection.md  malicious_multi.py  persistence.md  supply_chain.sh
tests/samples/: clean_skill.py  malicious_prompt.md  malicious_skill.py
